// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component accepts ListElement and ItemElement prop, that can be a react component 1`] = `
<div>
  <button />
  <button />
</div>
`;

exports[`component accepts ListElement and ItemElement prop, that can be a string of html element 1`] = `
<div>
  <button />
  <button />
</div>
`;

exports[`component accepts className and itemClassName prop, that is applied to elements 1`] = `
<ul
  class="app__list"
>
  <li
    class="app__list-item"
  >
    <div>
      item1
       
      0
    </div>
  </li>
  <li
    class="app__list-item"
  >
    <div>
      item2
       
      1
    </div>
  </li>
</ul>
`;

exports[`doesn't render anything with empty list-prop 1`] = `null`;

exports[`doesn't render anything without list-prop 1`] = `null`;

exports[`itemFunc has access to each item and current index 1`] = `
<ul>
  <li>
    <div>
      item1
       
      0
    </div>
  </li>
  <li>
    <div>
      item2
       
      1
    </div>
  </li>
</ul>
`;

exports[`renders itemFunc's result as each <li> elements children 1`] = `
<ul>
  <li>
    hi
  </li>
  <li>
    hi
  </li>
</ul>
`;

exports[`renders only ul > li without itemFn-prop 1`] = `
<ul>
  <li />
  <li />
</ul>
`;
